<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WIFI direct Broadcast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="port_used">port is already used by other software</string>
    <string name="bind_failed">You need to choose another port for the %s server !</string>
	<string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Get video list</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="Setting_Title">Server Settings </string>
    <string name="Setting_subTitle_Loss">Server Settings</string>
    <string name="Setting_EC_Block_Size">EC block size </string>
    <string name="Setting_Addttional_Send">Addtional packets to send</string>
    <string name="options">Server Settings</string>
    <string name="Setting_loss_control_client">Lost simulation(Client side)</string>
    <string name="Setting_loss_control_client_item0">0%</string>
    <string name="Setting_loss_control_client_item1">10%</string>
    <string name="Setting_loss_control_client_item2">20%</string>
    <string name="Setting_loss_control_client_item3">30%</string>
    <string name="Setting_loss_control_client_item4">40%</string>
    <string name="Setting_loss_control_client_item5">80%</string>
    <string name="Setting_subTitle_RTP">Client Setings</string>
    <string name="Setting_Tunnel_Switch">Use EC2RTP Tunnel</string>
    <string name="Setting_RTP_Switch">Use EC-RTP Ver.1</string>
    <string name="Setting_RTP_Switch1">Use EC-RTP Ver.2</string>
    <string name="exit">exit</string>
</resources>